--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,8 @@ ul, ol {
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4,0,0.2,1);
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -80,6 +82,16 @@ ul, ol {
 }
 .nav-list .studio {
     color: #404bbf;
+}
+.nav-list .studio::after{
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 .header {
     border-bottom: 1px solid #e7e9fc;
@@ -109,7 +121,9 @@ ul, ol {
     margin-right: auto;
     padding: 188px 0;
     box-shadow: 0 2px 1px;
-    background-image: rgba(46, 47, 66, 0.7);
+    background: url(./images/dark-bg.jpg);
+    background-image: url(./images/people-office.jpg);
+    background: rgba(46, 47, 66, 0.7);
 }
 .page-title {
     font-weight: 700;
@@ -259,6 +273,21 @@ ul, ol {
     color: #434455;
     margin-bottom: 8px;
 }
+.icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
+    width: 232px;
+    height: 40px;
+}
+.icon:hover{
+    color: #4d5ae5;
+}
+.icon:focus {
+    color: #404bbf;
+}
 /* ======portfolio====== */
 .portfolio {
     padding-top: 120px;
@@ -357,17 +386,23 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    max-width: 208px;
     margin-bottom: 16px;
     text-transform: uppercase;
-    display: inline-block;
-    text-align: center;
-}
+}  
 .footer-media {
     flex-direction: column;
     margin-left: 540px;
     margin-right: 692px;
     display: flex;
-   
+    
 }
-
+.icon-f {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 16px;
+    width: 208px;
+    height: 40px;
+    
+}
