--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ ul, ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover,
 .address-link:focus {
@@ -95,6 +96,7 @@ ul, ol {
 }
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -121,9 +123,10 @@ ul, ol {
     margin-right: auto;
     padding: 188px 0;
     box-shadow: 0 2px 1px;
-    background: url(./images/dark-bg.jpg);
-    background-image: url(./images/people-office.jpg);
-    background: rgba(46, 47, 66, 0.7);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7)), url(./images/people-office.jpg) ;
 }
 .page-title {
     font-weight: 700;
@@ -139,7 +142,6 @@ ul, ol {
 .page-container {
     display: block;
     text-align: center;
-    
 }
 .button {
     font-family: "Roboto", sans-serif;
@@ -156,7 +158,9 @@ ul, ol {
     border: none;
     border-radius: 4px;
     margin: 0 auto;
-    box-shadow: rgba(0, 0, 0, 0.15);
+}
+.btn {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover {
     background-color: #404bbf;
@@ -252,7 +256,7 @@ ul, ol {
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
     background: #fff;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+   
 } 
 .avatar-name {
     font-weight: 500;
@@ -273,21 +277,7 @@ ul, ol {
     color: #434455;
     margin-bottom: 8px;
 }
-.icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 24px;
-    width: 232px;
-    height: 40px;
-}
-.icon:hover{
-    color: #4d5ae5;
-}
-.icon:focus {
-    color: #404bbf;
-}
+
 /* ======portfolio====== */
 .portfolio {
     padding-top: 120px;
@@ -346,8 +336,9 @@ ul, ol {
     margin-right: auto;
 }
 .footer-p {
+    display: flex;
     flex-direction: column;
-    margin-right: 1020px;
+    margin-right: 120px;
     margin-left: 156px;
 }
 
@@ -396,13 +387,6 @@ ul, ol {
     display: flex;
     
 }
-.icon-f {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 16px;
-    width: 208px;
-    height: 40px;
+
     
-}
+
