--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,17 @@ ul, ol {
     color: #2e2f42;
     text-transform: capitalize;
 }
+.icon-b {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+    min-width: 264px;
+}
 .our-goal {
     font-weight: 500;
     font-size: 20px;
@@ -277,6 +288,15 @@ ul, ol {
     color: #434455;
     margin-bottom: 8px;
 }
+.media-list-avatar {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.social:hover,
+.social:focus{
+background-color: #404bbf;
+}
 
 /* ======portfolio====== */
 .portfolio {
@@ -334,12 +354,15 @@ ul, ol {
     padding: 100px 0;
     margin-left: auto;
     margin-right: auto;
+    
 }
 .footer-p {
     display: flex;
     flex-direction: column;
     margin-right: 120px;
     margin-left: 156px;
+    display: flex;
+    align-items: baseline;
 }
 
 .logo-f {
@@ -378,15 +401,43 @@ ul, ol {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-    text-transform: uppercase;
 }  
 .footer-media {
-    flex-direction: column;
-    margin-left: 540px;
-    margin-right: 692px;
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
 }
-
-    
-
+.media-list {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+.media-list-item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4,0,0.2,1)
+} 
+.media-dscr {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8px;
+}  
+.media-dscr:hover{
+    background-color: #31d0aa;
+}
+.media-dscr:focus{
+    background-color: #31d0aa; 
+}
+.media-link {
+    fill: #f4f4fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
