--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ ul, ol {
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
     background: #fff;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 } 
 .avatar-name {
     font-weight: 500;
@@ -309,6 +309,9 @@ background-color: #404bbf;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.media-link {
+    fill: #f4f4fd;
 }
 /* ======portfolio====== */
 .portfolio {
@@ -356,8 +359,30 @@ background-color: #404bbf;
 .portfolio-list-item {
     width: calc((100% - 48px) / 3); 
     background: #fff; 
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
 }
-
+.portfolio-list-item:hover{
+    transform: translateY(0%);
+}
+.window {
+    position: relative;
+    overflow: hidden;
+}
+.window-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /* =====footer====== */
 
 .section {
