--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ ul, ol {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7)), rgba(46, 47, 66, 0.7) url(./images/people-office.jpg) ;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7)), rgba(46, 47, 66, 0.7), url(../images/people-office.jpg) ;
 }
 .page-title {
     font-weight: 700;
