--- a/css/styles.css
+++ b/css/styles.css
@@ -358,20 +358,18 @@ background-color: #404bbf;
 }
 .portfolio-list-item {
     width: calc((100% - 48px) / 3); 
-    background: #fff; 
-    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
+    cursor: pointer;
 }
 .portfolio-list-item:hover{
-    transform: translateY(0%);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.window {
-    position: relative;
-    overflow: hidden;
+.window:hover .window-text{
+    transform: translateY(0%);
 }
 .window-text {
     position: absolute;
     top: 0;
+    left: 0;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -379,9 +377,16 @@ background-color: #404bbf;
     padding: 40px 32px;
     background-color: #4d5ae5;
     height: 100%;
-    width: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%; 
+    transform: translateY(100%);  
+}
+.window {
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-img {
+    max-width: 100%;
+    object-fit: cover;
 }
 /* =====footer====== */
 
@@ -390,16 +395,18 @@ background-color: #404bbf;
     max-width: 1440px;
     padding: 100px 0;
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right: auto; 
+}
+.footer-section {
+    display: flex;
+    align-items: baseline;
 }
 .footer-p {
     display: flex;
     flex-direction: column;
     margin-right: 120px;
     margin-left: 156px;
-    display: flex;
-    align-items: baseline;
+    
 }
 
 .logo-f {
@@ -444,7 +451,7 @@ background-color: #404bbf;
     justify-content: center;
     align-items: center;
     max-width: 208px;
-   
+   flex-direction: column;
 }
 .media-list {
     display: flex;
