--- a/css/styles.css
+++ b/css/styles.css
@@ -293,8 +293,8 @@ ul, ol {
     justify-content: center;
     gap: 24px;
 }
-.social:hover,
-.social:focus{
+.link:hover,
+.link:focus{
 background-color: #404bbf;
 }
 .media-list-item-t {
@@ -359,6 +359,7 @@ background-color: #404bbf;
 .portfolio-list-item {
     width: calc((100% - 48px) / 3); 
     cursor: pointer;
+    transition:  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover{
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -400,13 +401,12 @@ background-color: #404bbf;
 .footer-section {
     display: flex;
     align-items: baseline;
+    margin-right: 120px;
 }
 .footer-p {
     display: flex;
     flex-direction: column;
-    margin-right: 120px;
     margin-left: 156px;
-    
 }
 
 .logo-f {
@@ -461,7 +461,7 @@ background-color: #404bbf;
 .media-list-item {
     width: 40px;
     height: 40px;
-   
+  
 } 
 .media-dscr {
     display: flex;
@@ -474,7 +474,7 @@ background-color: #404bbf;
     align-items: center;
     justify-content: center;
     margin-top: 8px;
-   
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }  
 .media-dscr:hover{
     background-color: #31d0aa;
