--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,8 @@ background-color: #404bbf;
     background-color: #4d5ae5;
     height: 100%;
     width: 100%; 
-    transform: translateY(100%);  
+    transform: translateY(100%); 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .window {
     position: relative;
@@ -401,12 +402,13 @@ background-color: #404bbf;
 .footer-section {
     display: flex;
     align-items: baseline;
-    margin-right: 120px;
+   
 }
 .footer-p {
     display: flex;
     flex-direction: column;
     margin-left: 156px;
+    margin-right: 120px;
 }
 
 .logo-f {
