--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,9 @@ background-color: #404bbf;
 .media-list-item-t {
     width: 40px;
     height: 40px;
+    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .media-dscr-social {
     width: 100%;
     height: 100%;
@@ -309,6 +311,7 @@ background-color: #404bbf;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .media-link {
     fill: #f4f4fd;
