--- a/css/styles.css
+++ b/css/styles.css
@@ -297,10 +297,13 @@ ul, ol {
 .link:focus{
 background-color: #404bbf;
 }
+.link {
+    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .media-list-item-t {
     width: 40px;
     height: 40px;
-    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 .media-dscr-social {
